# antharion_clone

antharion_clone/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
antharion_clone/components/base/: CMakeLists.txt
antharion_clone/components/base/include/: allTheories.h  theory.h  theory1.h  theory2.h  theory3.h  theory4.h  theory5.h  theory6.h  theory7.h  theory8.h  types.h  variables.h
antharion_clone/components/base/unit-tests/: CMakeLists.txt  variables.t.cpp
antharion_clone/executables/: CMakeLists.txt
antharion_clone/executables/currentRates/: CMakeLists.txt  main.cpp
antharion_clone/executables/idealtau/: CMakeLists.txt  main.cpp
antharion_clone/executables/main/: CMakeLists.txt  main.cpp
antharion_clone/executables/makePlotFiles/: CMakeLists.txt  main.cpp
antharion_clone/executables/singlegraph/: CMakeLists.txt  main.cpp
